fixed pointer events being covered by logotype, added index link to logo

--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -48,6 +48,7 @@ html {
   font-size: 2.4rem;
   width: calc(100vw - (100vw - 100%));
   height: 100vh;
+  pointer-events: none;
   @media (--medium) {
     margin: 10.8rem 2.4rem 0;
   }
